# fast_voigt

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmarks.txt
.cargo/: config.toml
benches/: benchmark.rs
python/: eval_accuracy.py  eval_speed.py
src/: const_parameters.rs  lib.rs  py_bindings.rs  scalar.rs  simd.rs  test_utils.rs
