[package]
name = "fast_voigt"
version = "0.1.0"
edition = "2024"

[dependencies]
num-complex = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = true }
pulp = { version = "0.22.2", features = ["x86-v4"] }
paste = "1.0.15"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

# [profile.release]
# opt-level = 3
# debug = "none"
# strip = "symbols"
# debug-assertions = false
# overflow-checks = false
# lto = "fat"
# panic = "abort"
# incremental = false
# codegen-units = 1

[[bench]]
name = "benchmark"
harness = false