[package]
name = "fast_voigt"
version = "0.1.0"
edition = "2024"


[lib]
name = "fast_voigt"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
crate-type = ["cdylib", "rlib"]

[dependencies]
num-complex = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = true }
cfg-if = "1.0.4"
pulp = { version = "0.22.2", features = ["x86-v4"]}
paste = {version = "1.0.15"} 
# pyo3 = { version = "0.28.0", optional = true }
# numpy = { version = "0.28", optional = true }
pyo3 = { version = "0.28.0"}
numpy = { version = "0.28"}


[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }

[features]
default = []
avx2 = []
avx512 = []
py_bindings = []
# py_bindings = ["dep:pyo3", "dep:numpy"]

# [profile.release]
# opt-level = 3
# debug = "none"
# strip = "symbols"
# debug-assertions = false
# overflow-checks = false
# lto = "fat"
# panic = "abort"
# incremental = false
# codegen-units = 1

[[bench]]
name = "benchmark"
harness = false